--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -1,26 +1,26 @@
 on: [push]
 name: deploy
-jobs:
-  my_job:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Imprimir secrets
-        env:
-          MI_VARIABLE_SECRETA: ${{ secrets.DOCKER_USERNAME }}
-        run: printenv
-
 # jobs:
-#   deploy:
-#     name: deploy to cluster
+#   my_job:
 #     runs-on: ubuntu-latest
 #     steps:
-#       - uses: actions/checkout@master
-#       - name: build and push to docker
-#         uses: docker/build-push-action@v1
-#         with:
-#           username: ${{ secrets.DOCKER_USERNAME }}
-#           password: ${{ secrets.DOCKER.PASSWORD }}
-#           repository: ${{ github.repository }}
-#           tag_with_ref: true
-#           tag_with_sha: true
-#           tags: ${{ github.sha }}
+#       - name: Imprimir secrets
+#         env:
+#           MI_VARIABLE_SECRETA: ${{ secrets.DOCKER_USERNAME }}
+#         run: printenv
+
+jobs:
+  deploy:
+    name: deploy to cluster
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@master
+      - name: build and push to docker
+        uses: docker/build-push-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+          repository: ${{ github.repository }}
+          tag_with_ref: true
+          tag_with_sha: true
+          tags: ${{ github.sha }}
