--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -23,4 +23,7 @@ jobs:
           repository: ${{ github.repository }}
           tag_with_ref: true
           tag_with_sha: true
-          tags: ${{ github.sha }}
+          tags: |
+            latest
+            ${{ github.sha }}
+            $(echo "${{ github.sha }}" | tr '[:upper:]' '[:lower:]' | sed 's/[^a-z0-9._-]//g')
