--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -20,7 +20,7 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-          repository: ${{ github.repository }}
+          repository: ${{ github.repository | lower() }}
           tag_with_ref: true
           tag_with_sha: true
-          tags: ${{ github.sha.lower}}
+          tags: ${{ github.sha}}
