--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -1,18 +1,33 @@
-on: [push]
-name: deploy
+name: ci
+
+on:
+  push:
+    branches:
+      - 'main'
 
 jobs:
-  deploy:
-    name: deploy to cluster
+  docker:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@master
-      - name: build and push to docker
-        uses: docker/build-push-action@v1
+      -
+        name: Checkout
+        uses: actions/checkout@v3
+      -
+        name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+      -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      -
+        name: Login to Docker Hub
+        uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-          repository: portafolio
-          tag_with_ref: true
-          tag_with_sha: true
-          tags: ${{ github.sha}}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      -
+        name: Build and push
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          push: true
+          tags: user/app:latest
